wip editor rework destroyed a few bits of code in the model... :/